fix: fixed steam api should be configurable by user
